# lemin

./: .gitignore  CMakeLists.txt  Makefile  check_maps.sh  cleaner.c  error_handler.c  main.c  read_ants_count.c  read_room.c
includes/: lemin.h
libft/: CMakeLists.txt  Makefile  clean_two_dim.c  libft.h
maps/: i1  i10  i11  i12  i13  i14  i15  i2  i3  i4  i5  i6  i7  i8  i9  invalid_map_abc_ants  invalid_map_neg_ants  invalid_map_neg_room_coords  invalid_map_no_end  invalid_map_no_start  invalid_map_no_way_to_end  invalid_map_wrong_link  invalid_map_wrong_room  n1  n2  n3  n4  n5  test  v1  v2  v3  v4  v5  valid_map_extra_cmd  valid_map_no_comments  valid_map_with_comments  список_возможных_косяков
srcs/: ant_management.c  bellman_ford.c  check_input.c  check_len.c  check_path.c  cleaner.c  dijkstra.c  distance_matrix.c  edge_handler.c  error_handler.c  frankenstein.c  has_intersection.c  input_init.c  is_something.c  link_matrix.c  main.c  matrix.c  path_handler.c  print_any.c  print_output.c  read_ants_count.c  read_cmd.c  read_input.c  read_link.c  read_room.c  reset.c  room_handler.c  set_command.c  set_deadlock_off.c  set_path.c  split_paths.c  suurbale.c  update_graph.c  vector_handler.c
